--- a/views/cmsi185/notes/dataTypesAndVariables.jade
+++ b/views/cmsi185/notes/dataTypesAndVariables.jade
@@ -8,9 +8,9 @@ block content
     .panel-body
       h2(class="project-title") JavaScript's data types are:
       p(class="indent") &#8226 Booleans - true/false
-      p(class="indent") &#8226 Numbers - integers, floating point numbers, hexadecimal, binary, octal
+      p(class="indent") &#8226 Numbers - integers, floating point numbers, hexadecimal, binary, octal, NaN
       p(class="indent") &#8226 Strings - characters, words, sentences, etc.
-      p(class="indent") &#8226 Special types - null, undefined, NaN
+      p(class="indent") &#8226 Special types - null, undefined
       p(class="indent") &#8226 Objects
       p(class="indent") &#8226 Arrays
       p(class="indent") &#8226 Functions
