Added jquery example

--- a/views/cmsi185/notes/webPages.jade
+++ b/views/cmsi185/notes/webPages.jade
@@ -61,3 +61,16 @@ block content
       p Here's a 
         a(href="http://www.w3schools.com/cssref/" target="_blank") list
         |  of CSS property names and possible values to choose from
+
+  div
+  .panel.panel-default.content.project-div
+    div(id="example")
+    .panel-body
+      h2(class="project-title") An Example
+      p This example uses jQuery.
+      p Save your 
+        a(href="/downloadableContent/myContent.html" download) HTML
+      p and your 
+        a(href="/downloadableContent/myStyles.css" download) CSS
+      p and your 
+        a(href="/downloadableContent/myFunctionality.js" download) JavaScript
