--- a/views/cmsi185/homework/homework7.jade
+++ b/views/cmsi185/homework/homework7.jade
@@ -118,4 +118,4 @@ block content
         | pass all of my unit tests.
       br
 
-      p 3. Draw your prototype with the object drawing method from class.
+      p 3. Draw Astronaut with the object drawing method from class.
