Added unit testing notes

--- a/views/cmsi185/notes/unitTesting.jade
+++ b/views/cmsi185/notes/unitTesting.jade
@@ -35,3 +35,18 @@ block content
       p(class="indent") &#8226 null
       p(class="indent") &#8226 undefined
       p(class="indent") &#8226 The empty string
+
+  div
+  .panel.panel-default.content.project-div
+    div
+    .panel-body
+      h2(class="project-title") How to write a unit test?
+      p A good unit testing framework is 
+        a(href="https://qunitjs.com/" target="_blank") QUnit
+      br
+      p A unit test should consist of two things: a call to your code and an assertion of what the expected
+        | output is.
+      p Your assertion can do one of many things, for example, test for equality, inequality, error throwing, etc. 
+        | Here is the 
+        a(href="http://api.qunitjs.com/category/all/" target="_blank") documentation 
+        |  for what QUnit supports
