--- a/views/cmsi185/homework/homework7.jade
+++ b/views/cmsi185/homework/homework7.jade
@@ -24,7 +24,7 @@ block content
   .panel.panel-default.content.project-div
     div
     .panel-body
-      p 1. Create a constructor which creates an 
+      p 1. Create a constructor/prototype which creates an 
         b Astronaut
         |  object upon being called. 
       p(class="indent") A new Astronaut should be created like this:
@@ -101,7 +101,7 @@ block content
       p(class="indent") Make sure their belongings 
         b as a cohesive group (structure can be malleable to simplify this problem) 
         | -each object has properties weightOnEarth and volume- 
-        |  will fit in the compartment (volume-wise and weight-wise)
+        |  will fit in the compartment (volume-wise and weight-wise...a comprehensive total)
       p(class="indent") &#8226 
         b spaceName
         |  which takes in zero arguments returns your astronaut's space name. A space name is defined to be 
@@ -118,4 +118,4 @@ block content
         | pass all of my unit tests.
       br
 
-      p 3. Draw Astronaut with the object drawing method from class.
+      p 3. Draw your Astronaut constructor/prototype with the object drawing method from class.
