--- a/views/cmsi185/homework/homework7.jade
+++ b/views/cmsi185/homework/homework7.jade
@@ -11,8 +11,8 @@ block content
       h2(class="project-title") Instructions
       p Type up your solutions.
       br
-      p Type up your solutions. For questions involving code, save your code in a JSFiddle and 
-      | email me the JSFiddle URL as well as put the code in your hard copy.
+      p Type up your solutions. For questions involving code, save your code and 
+      | email me the files as well as put the code in your hard copy.
       br
       p Make sure to test all arguments for valid input.
       p Points will be taken off for code that does not do what the question asked, for unclean code, and for 
@@ -113,9 +113,11 @@ block content
       br
 
       p 2. Write unit tests for your prototype. Each function should have at least 5 unit tests. Other
-        | properties' unit tests are up to your discretion on what it means to fully test your prototype.
+        | properties' unit tests are up to your discretion on what it means to fully test Astronaut.
       p(class="indent") I will be writing my own unit tests, make sure to cover all corner cases so you
         | pass all of my unit tests.
+      p(class="indent") Make sure to turn in your javascript file, javascript-test file, qunit.css, qunit.js, 
+        | jquery.js (if it's not referenced via a website), and your html file in a zipped folder.
       br
 
       p 3. Draw your Astronaut constructor/prototype with the object drawing method from class.
