--- a/views/cmsi185/homework/homework7.jade
+++ b/views/cmsi185/homework/homework7.jade
@@ -97,7 +97,8 @@ block content
       p(class="indent") Each astronaut gets a personal belongings compartment.
       p(class="indent") Ex: If it is 4ft x 5ft x 11ft and can hold a maximum of 100lbs (on Earth), 
         | the function call will look like this:
-      p(class="indent") canFit(48, 60, 132, 100, [{...}, {...}])
+      p(class="indent") canFit(48, 60, 132, 100, [{name: "hockey stick", volume: 23, weight: 33}, 
+        | {name: "exercise ball", volume: 210, weight: 2}])
       p(class="indent") Make sure their belongings 
         b as a cohesive group (structure can be malleable to simplify this problem) 
         | -each object has properties weightOnEarth and volume- 
