--- a/views/cmsi185/homework/homework7.jade
+++ b/views/cmsi185/homework/homework7.jade
@@ -38,6 +38,8 @@ block content
       p(class="indent") &#8226 weightOnEarth
       p(class="indent") &#8226 favoriteFoods - an array of their favorite foods, from favorite (index 0) to least favorite
       p(class="indent") b. Built in functions:
+      p(class="indent")
+        b NONE OF THESE FUNCTIONS SHOULD ALTER YOUR ORIGINAL Astronaut INSTANCE
       p(class="indent") &#8226 
         b localWeight
         |  - which takes in 1 argument, the local planet and returns the 
