--- a/views/cmsi185/homework.jade
+++ b/views/cmsi185/homework.jade
@@ -24,3 +24,5 @@ block content
         a(href="/cmsi185/homework/6") Homework 6
       p
         a(href="/cmsi185/homework/7") Homework 7
+      p
+        a(href="/cmsi185/homework/8") Homework 8
