--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,4 @@
-extends layout
+extends blankLayout
 
 block content
   h1= title
@@ -7,6 +7,6 @@ block content
     div
     .panel-body
     p
-      a(href="/lmuHome") CMSI 185
+      a(href="/cmsi185") CMSI 185
     p
-      a(href="/aboutMe") Other
+      a(href="/cmsi186") CMSI 186
