--- a/views/lmuLayout.jade
+++ b/views/lmuLayout.jade
@@ -14,32 +14,32 @@ html
     nav(class="navbar navbar-default navbar-fixed-top" role="navigation")
       div(class="container")
         ul(class="nav navbar-nav")
-          if title == "Haley Young"
+          if title == "Courses"
             li(class="nav-link selected")
-              a(href="/lmuHome") Home
+              a(href="/") Home
           else
             li(class="nav-link")
-              a(href="/lmuHome") Home
+              a(href="/") Home
 
           if title == "Syllabus"
             li(class="nav-link selected")
-              a(href="/cmsi185/syllabus") Syllabus
+              a(href="/" + course + "/") Syllabus
           else
             li(class="nav-link")
-              a(href="/cmsi185/syllabus") Syllabus
+              a(href="/" + course + "/") Syllabus
 
           if title == "Course Notes"
             li(class="nav-link selected")
-              a(href="/cmsi185/courseNotes") Course Notes
+              a(href="/" + course + "/courseNotes") Course Notes
           else
             li(class="nav-link")
-              a(href="/cmsi185/courseNotes") Course Notes
+              a(href="/" + course + "/courseNotes") Course Notes
 
           if title == "Homework"
             li(class="nav-link selected")
-              a(href="/cmsi185/homework") Homework
+              a(href="/" + course + "/homework") Homework
           else
             li(class="nav-link")
-              a(href="/cmsi185/homework") Homework
+              a(href="/" + course + "/homework") Homework
 
   block content
