--- a/views/cmsi186/syllabus.jade
+++ b/views/cmsi186/syllabus.jade
@@ -10,7 +10,7 @@ block content
       h2 Programming Laboratory
       p TR 11:20am - 12:50pm &#8226 Doolan 112
       p Spring 2016 &#8226 Haley Young &#8226 haley.young@lmu.edu
-      p Office Hours - Doolan 112 Thursdays 12:50pm - 2:50pm and by appointment
+      p Office Hours - Doolan 112 Thursdays 12:35pm - 2:35pm and by appointment
 
   div
   .panel.panel-default.content.project-div
@@ -63,35 +63,35 @@ block content
     .panel-body
       h2(class="project-title") Assignments
       p During the Java introduction portion of the course, an assignment will be given every class. During the 
-        | workshop portion of the course, an assignment will be given approximately every other week. You may work 
-        | with a partner (explicitly one person) on your homework assignments, but if you do so, you must clearly 
-        | state both names upon submission and all problems must be completed in a peer-programming manner. Do not 
-        | split the problems between partners. Any deviation from these guidelines may result in a deduction of points 
-        | or a score of zero up to the instructor's discretion.
+        | workshop portion of the course, an assignment will be given approximately every other week. Although the culture 
+        | of computer science allows coding in pairs/groups, you may NOT work with a partner.
       p Should there be any ambiguities in the assignment, either ask for clarification or include your assumption(s) 
         | in your lab report.
-      p A lab report will be required in addition to the code for the assignment. This lab report should include hurdles
-        | conquered (or not) during design and implementation, the intension of your test cases, and any known bugs as well as 
-        | your assumptions.
-      p Homework should be submitted via email by the beginning of the class as well as a hard copy brought into class. 
-        | Late assignments will not be accepted.
+      p A lab report will be required in addition to the code for each assignment. Each lab report should include a 
+        | problem description, hurdles conquered (or not) during design and implementation, the intention and coverage 
+        | of your unit tests, and any known bugs as well as your assumptions (as mentioned above). A lab report should 
+        | be 400 words minimum.
+      p Homework should be submitted via GitHub by the beginning of the class. For each new assignment, create a new folder 
+        | in your GitHub repository named 'homeworkx' where x is the assignment number. You may submit your homework up 
+        | to two days late, but you will receive a 10% grade deduction. Meaning, if homework is due Tuesday, you can 
+        | submit your homework on Thursday at the beginning of class for a maximum of a 90%. If your code does not 
+        | compile, I will not grade it.
+      p Assignments will be graded based on the code's functionality, the quality, organization and style of the code, the 
+        | coverage of your unit tests and the clarity and depth of your lab report.
+      p Any deviation from these guidelines may result in a deduction of points or a score of zero, up to the instructor's
+        | discretion.
 
       h2(class="project-title") Participation/Attendance
       p This is a laboratory course. Your education in this course will be highly dependent upon your attendance and 
         | participation in class. So come to class; be active and engaged.
 
       h2(class="project-title") Exams
-      p Exams will be closed-book and hand-written. The midterm will be on February 25th and the final will be on 
-        | May 3rd at 11:00am.
+      p Because of the nature of this course, there will be no exams.
 
       h2(class="project-title") Grading
-      p Participation 10%
+      p Participation 25%
         br
-        | Assignments 50%
-        br
-        | Midterm 15%
-        br
-        | Final 25%
+        | Assignments 75%
 
       br
       p The grading scheme will be as follows:
