First lesson and hw

--- a/views/cmsi186/courseNotes.jade
+++ b/views/cmsi186/courseNotes.jade
@@ -6,3 +6,5 @@ block content
   .panel.panel-default.content.project-div
     div
     .panel-body
+      p
+        a(href="/cmsi186/courseNotes/intro") Java Installation and Hello World
