--- a/views/cmsi186/homework.jade
+++ b/views/cmsi186/homework.jade
@@ -4,9 +4,11 @@ block content
   h1= title
   div
   .panel.panel-default.content.banner
-    p Office hours are held in Doolan 112 on Thursdays 12:50 - 2:50pm
+    p Office hours are held in Doolan 112 on Thursdays 12:35 - 2:35pm
     p There are also TAs in the lab (Doolan 112) willing to help. Check the schedule in the lab for times.
   div
   .panel.panel-default.content.project-div
     div
     .panel-body
+      p
+        a(href="/cmsi186/homework/1") Homework 1
