Added recommended texts

--- a/views/cmsi186/syllabus.jade
+++ b/views/cmsi186/syllabus.jade
@@ -117,6 +117,18 @@ block content
   .panel.panel-default.content.project-div
     div
     .panel-body
+      h2(class="project-title") Recommended Texts
+      p 
+        a(href="http://www.amazon.com/Java-Nutshell-Benjamin-J-Evans/dp/1449370829/ref=sr_1_1?ie=UTF8&qid=1452586294&sr=8-1&keywords=java+in+a+nutshell" target="_blank") Java In a Nutshell
+        |  by Benjamin Evans and David Flanagan
+      p
+        a(href="http://www.amazon.com/Java-Beginners-Guide-Herbert-Schildt/dp/0071809252/ref=sr_1_1?ie=UTF8&qid=1452586500&sr=8-1&keywords=java+a+beginner%27s+guide" target="_blank") Java A Beginner's Guide
+        |  by Herbert Schildt
+
+  div
+  .panel.panel-default.content.project-div
+    div
+    .panel-body
       h2(class="project-title") Academic Honesty
       p Academic dishonesty will be treated as an extremely serious matter with severe consequences that can
         | range from receiving no credit for assignments/tests, failing the class, to expulsion. It is never permissible 
