Notes and homework

--- a/views/cmsi186/courseNotes.jade
+++ b/views/cmsi186/courseNotes.jade
@@ -8,3 +8,5 @@ block content
     .panel-body
       p
         a(href="/cmsi186/courseNotes/intro") Java Installation and Hello World
+      p
+        a(href="/cmsi186/courseNotes/primitiveTypesAndVariableDeclaration") Primitive Types and Variable Declaration
