--- a/views/cmsi186/homework.jade
+++ b/views/cmsi186/homework.jade
@@ -12,3 +12,5 @@ block content
     .panel-body
       p
         a(href="/cmsi186/homework/1") Homework 1
+      p
+        a(href="/cmsi186/homework/2") Homework 2
