--- a/views/cmsi186/notes/primitiveTypesAndVariableDeclaration.jade
+++ b/views/cmsi186/notes/primitiveTypesAndVariableDeclaration.jade
@@ -34,6 +34,9 @@ block content
         | a value.
       p
         img(src="/images/cmsi186/variableDeclaration.png")
+      p Java's built in 
+        a(href="http://docs.oracle.com/javase/tutorial/java/nutsandbolts/_keywords.html" target="_blank") keywords
+        |  and values cannot be used as variable names.
 
 
   div
@@ -42,3 +45,18 @@ block content
     .panel-body
       h2(class="project-title") Let's Write Some Code!
       img(src="/images/cmsi186/codeItOut1.png")
+
+
+  div
+  .panel.panel-default.content.project-div
+    div
+    .panel-body
+      h2(class="project-title") Java Style
+      p Please refernece this 
+        a(href="https://google.github.io/styleguide/javaguide.html#s4.4-column-limit" target="_blank") style guide
+        |  for Java's style specifications.
+      p The big ones for now are:
+        ol
+          li The 80 or 100 column limit
+          li Indentation
+          li Line breaks
