Adding notes and homework

--- a/views/cmsi186/courseNotes.jade
+++ b/views/cmsi186/courseNotes.jade
@@ -10,3 +10,7 @@ block content
         a(href="/cmsi186/courseNotes/intro") Java Installation and Hello World
       p
         a(href="/cmsi186/courseNotes/primitiveTypesAndVariableDeclaration") Primitive Types and Variable Declaration
+      p
+        a(href="/cmsi186/courseNotes/typeCasting") Type Casting
+      p
+        a(href="/cmsi186/courseNotes/controlStatements") Control Statements
