--- a/views/cmsi186/notes/primitiveTypesAndVariableDeclaration.jade
+++ b/views/cmsi186/notes/primitiveTypesAndVariableDeclaration.jade
@@ -53,7 +53,7 @@ block content
     .panel-body
       h2(class="project-title") Java Style
       p Please refernece this 
-        a(href="https://google.github.io/styleguide/javaguide.html#s4.4-column-limit" target="_blank") style guide
+        a(href="https://google.github.io/styleguide/javaguide.html" target="_blank") style guide
         |  for Java's style specifications.
       p The big ones for now are:
         ol
