--- a/views/cmsi186/homework/homework3.jade
+++ b/views/cmsi186/homework/homework3.jade
@@ -15,7 +15,7 @@ block content
         | folder names please!
         br
         br
-      p Due January 19th
+      p Due January 21st
 
   div
   .panel.panel-default.content.project-div
