Adding hw4 and some more notes

--- a/views/cmsi186/homework.jade
+++ b/views/cmsi186/homework.jade
@@ -16,3 +16,5 @@ block content
         a(href="/cmsi186/homework/2") Homework 2
       p
         a(href="/cmsi186/homework/3") Homework 3
+      p
+        a(href="/cmsi186/homework/4") Homework 4
