--- a/views/cmsi186/notes/primitiveTypesAndVariableDeclaration.jade
+++ b/views/cmsi186/notes/primitiveTypesAndVariableDeclaration.jade
@@ -60,3 +60,9 @@ block content
           li The 80 or 100 column limit
           li Indentation
           li Line breaks
+      br
+      h2(class="project-title") Let's clean up some code
+      p
+        img(src="/images/cmsi186/cleanCode1.png")
+      p
+        img(src="/images/cmsi186/cleanCode2.png")
