Added notes and homework 5

--- a/views/cmsi186/courseNotes.jade
+++ b/views/cmsi186/courseNotes.jade
@@ -14,3 +14,5 @@ block content
         a(href="/cmsi186/courseNotes/typeCasting") Type Casting
       p
         a(href="/cmsi186/courseNotes/controlStatements") Control Statements
+      p
+        a(href="/cmsi186/courseNotes/classesAndMethods") Classes and Methods
