--- a/views/cmsi186/homework.jade
+++ b/views/cmsi186/homework.jade
@@ -18,3 +18,5 @@ block content
         a(href="/cmsi186/homework/3") Homework 3
       p
         a(href="/cmsi186/homework/4") Homework 4
+      p
+        a(href="/cmsi186/homework/5") Homework 5
