Adding packckage notes

--- a/views/cmsi186/courseNotes.jade
+++ b/views/cmsi186/courseNotes.jade
@@ -16,3 +16,5 @@ block content
         a(href="/cmsi186/courseNotes/controlStatements") Control Statements
       p
         a(href="/cmsi186/courseNotes/classesAndMethods") Classes and Methods
+      p
+        a(href="/cmsi186/courseNotes/packagesAndAccessModifiers") Packages
