--- a/views/cmsi186/notes/classesAndMethods.jade
+++ b/views/cmsi186/notes/classesAndMethods.jade
@@ -54,5 +54,20 @@ block content
   .panel.panel-default.content.project-div
     div
     .panel-body
+      h2(class="project-title") Static
+      p In Java, the keyword 
+        b static 
+        | can be used to allow a member variable or member method to exist and be used without an
+        | instance of a class.
+      p In other words, a static member is not dependent upon an object instance.
+      p To call or access a static member, reference it with the class name followed by the dot 
+        | operator and the member's name.
+      p
+        img(src="/images/cmsi186/static.png")
+
+  div
+  .panel.panel-default.content.project-div
+    div
+    .panel-body
       h2(class="project-title") An example class
       img(src="/images/cmsi186/class.png")
