--- a/views/cmsi186/homework/homework5.jade
+++ b/views/cmsi186/homework/homework5.jade
@@ -43,9 +43,14 @@ block content
           | built in Calendar methods or anything related. This class must be constructed from first principles. The 
           | signature for each method should be defined in the manner displayed above, including parameter order.
       br
-      p 2. Create a class to display the capabilities of your DateHelper class. It should print to the command line 
-        | your methods' responses to dates defined in this class. Your main method should reside in this class. You 
-        | may put both classes in the same file.
+      p 2.
+        ol(type="a" class="indent")
+          li Create a class to display the capabilities of your DateHelper class. It should print to the command line 
+            | your methods' responses to dates defined in this class. Your main method should reside in this class. You 
+            | may put both classes in the same file.
+          li Write a test suite for your DateHelper class. Each method should be tested separately. Make sure to be 
+            | thorough and cover all edge cases.
+
       br
       p 3. Create two public classes. One called Card and one called Deck. The first 
         | Card in a Deck instance is considered the top Card, and the 52nd Card in a 
@@ -101,6 +106,10 @@ block content
               br
               b public Card peekCardAt(int index)
       br
-      p 4. Create a class to display the capabilities of your Card and Deck classes. It should print to the command line 
-        | your methods' responses to Cards and Decks defined in this class. Your main method should reside in this class. 
-        | For problems 3 and 4, put each of your classes in separate .java files.
+      p 4.
+        ol(type="a" class="indent")
+          li Create a class to display the capabilities of your Card and Deck classes. It should print to the command line 
+            | your methods' responses to Cards and Decks defined in this class. Your main method should reside in this class. 
+            | For problems 3 and 4, put each of your classes in separate .java files.
+          li Write a test suite for your Card and Deck classes. Each method should be tested separately. Make sure to be 
+            | thorough and cover all edge cases.
