--- a/views/cmsi186/homework.jade
+++ b/views/cmsi186/homework.jade
@@ -20,3 +20,5 @@ block content
         a(href="/cmsi186/homework/4") Homework 4
       p
         a(href="/cmsi186/homework/5") Homework 5
+      p
+        a(href="/cmsi186/homework/6") Homework 6
