--- a/views/cmsi186/homework/homework6.jade
+++ b/views/cmsi186/homework/homework6.jade
@@ -13,9 +13,15 @@ block content
         | upload it to your GitHub repository. Each question should be in its own file. Also, remember 
         | to put your code in a folder called "homeworkx" where x is the assignment number. All lowercase 
         | folder names please!
-      p Be sure to include your unit tests and lab report along with your code submission. Your 
-        | code, unit tests and lab report should all be in separate files. Save your lab report 
+      p Be sure to include your unit tests (for your Clock class) and lab report (
+        a(href="/downloadableContent/exampleLabReport.txt" download) example here
+        | ) along with your code submission. Your 
+        | code, unit tests and lab report should be in separate files. Save your lab report 
         | with a .txt extension.
+      p Although unit tests are not required for the ClockAngle class, be sure to test all 
+        | corner cases and confirm that the output you're getting seems valid. Gaining access 
+        | to an analog clock 
+        | to play with will be beneficial.
       p If you're choosing to turn in your homework late (2 day grace period for a 10% deduction), 
         | please send me an email so I know not to immediately grade your submission.
         br
@@ -43,12 +49,14 @@ block content
         | Clock class and its methods. ClockAngle should have 1 method...overloaded once.
         ol(type="a" class="indent")
           li timesWithAngle() 
-            | which finds and prints the times in a 12 hour day with a 
+            | which finds and prints the times in a 12 hour day when the hour and minute 
+            | hands of an analog clock form a 
             i decently 
             | straight angle (180&#176) 
             | searching with a time increment of 10 seconds.
           li timesWithAngle(int angle, int timeDelta) 
-            | which finds and prints the times in a 12 hour day with an angle 
+            | which finds and prints the times in a 12 hour day when the hour and minute 
+            | hands of an analog clock form an angle 
             i decently equivalent 
             | to 
             b angle 
