Fixed homework 6 problem

--- a/views/cmsi186/homework/homework6.jade
+++ b/views/cmsi186/homework/homework6.jade
@@ -53,7 +53,7 @@ block content
             | hands of an analog clock form a 
             i decently 
             | straight angle (180&#176) 
-            | searching with a time increment of 10 seconds.
+            | searching with a time increment of 10 minutes.
           li timesWithAngle(int angle, int timeDelta) 
             | which finds and prints the times in a 12 hour day when the hour and minute 
             | hands of an analog clock form an angle 
