--- a/views/cmsi186/homework.jade
+++ b/views/cmsi186/homework.jade
@@ -22,3 +22,5 @@ block content
         a(href="/cmsi186/homework/5") Homework 5
       p
         a(href="/cmsi186/homework/6") Homework 6
+      p
+        a(href="/cmsi186/homework/7") Homework 7
