--- a/views/cmsi186/homework/homework8.jade
+++ b/views/cmsi186/homework/homework8.jade
@@ -25,7 +25,7 @@ block content
         | please send me an email so I know not to immediately grade your submission.
         br
         br
-      p Due April 5th
+      p Due April 7th
 
   div
   .panel.panel-default.content.project-div
@@ -61,7 +61,7 @@ block content
           | any one of the three area specifications. 
           | It should also take in and return (and print) doubles. If the input is invalid, throw an 
           | exception stating how the input should look.
-        p(class="indent") It will probably be helpful to implement a Shape class with 
+        p(class="indent") It will probably be helpful to implement an abstract Shape class with 
           | Circle and Triangle subclasses for handling the command line input in an organized manner,
           | but this is not required. As long as the user experience is as described above.
           | Make sure to comment ALL of your methods.
