--- a/views/cmsi186/homework.jade
+++ b/views/cmsi186/homework.jade
@@ -26,3 +26,5 @@ block content
         a(href="/cmsi186/homework/7") Homework 7
       p
         a(href="/cmsi186/homework/8") Homework 8
+      p
+        a(href="/cmsi186/homework/9") Homework 9
