--- a/views/cmsi186/homework/homework9.jade
+++ b/views/cmsi186/homework/homework9.jade
@@ -46,11 +46,11 @@ block content
           br
           | Make change for 52 cents with coin denominations 1, 5, 10, and 25.
           br
-          | Your output should look like:
+          p Your output should look like:
           br
           p(class="indent") 52 cents can be made with
           p(class="indent") 2 25 cent coins
-          p(class="indent") 0 10 cent coints
+          p(class="indent") 0 10 cent coins
           p(class="indent") 0 5 cent coins
           p(class="indent") 2 1 cent coins
           br
