--- a/views/cmsi186/homework.jade
+++ b/views/cmsi186/homework.jade
@@ -28,3 +28,5 @@ block content
         a(href="/cmsi186/homework/8") Homework 8
       p
         a(href="/cmsi186/homework/9") Homework 9
+      p
+        a(href="/cmsi186/homework/10") Homework 10
